--- a/src/has/EditItem.form
+++ b/src/has/EditItem.form
@@ -85,6 +85,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="t2">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="130" y="220" width="100" height="-1"/>
